[package]
name = "dido-firmware"
description = "Tests project"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["display"]

[dependencies]
display = { path = "./display" }
embedded-hal = "0.2.6"
cortex-m-rtic = "1.1.4"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
systick-monotonic = "1.0.0"
panic-halt = "0.2.0"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
cortex-m = {version="0.7.7" , features = ["critical-section-single-core"]}
defmt-test = "0.3.0"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "high"]

[[bin]]
name = "dido-firmware"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"   
codegen-units = 1 
debug = true      
lto = true      

